# Evidence

./: .editorconfig  .gitattributes  .gitignore  CHANGELOG.md  CLAUDE.md  CODEOWNERS  CONTRIBUTING.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  clippy.toml  flake.nix
.githooks/: pre-push
crates/cargo-evidence/: Cargo.toml
crates/cargo-evidence/src/: cli.rs  main.rs
crates/cargo-evidence/src/cli/: README.md  args.rs  check.rs  diff.rs  doctor.rs  floors.rs  generate.rs  init.rs  output.rs  rules.rs  schema.rs  trace.rs  verify.rs
crates/cargo-evidence/src/cli/doctor/: checks.rs  qualification.rs  untracked_hint.rs
crates/cargo-evidence/src/cli/generate/: coverage_phase.rs  envelope.rs  phases.rs  policy.rs  test_outcomes.rs
crates/cargo-evidence/tests/: bundle_completeness.rs  check_bundle_mode.rs  check_human_format.rs  check_source_correctness.rs  cli.rs  coverage_e2e.rs  cross_time_determinism.rs  dal_qualification_gate.rs  derived_trace_validation.rs  doctor_checks_locked.rs  doctor_cmd.rs  doctor_max_dal.rs  floors_gate.rs  floors_lower_lint.rs  golden.rs  golden_fixtures.rs  help_listing.rs  init_backfill_validate.rs  rules_cmd.rs  self_compliance_baseline.rs  trace_cmd_jsonl.rs  trace_discovery.rs  verify_e2e.rs  verify_jsonl.rs  verify_prerelease.rs
crates/cargo-evidence/tests/cross_time_determinism/: helpers.rs
crates/cargo-evidence/tests/doctor_cmd/: helpers.rs
crates/cargo-evidence/tests/fixtures/: golden_rules.json
crates/evidence/: Cargo.toml  build.rs
crates/evidence-core/: Cargo.toml
crates/evidence-core/schemas/: cargo_metadata.schema.json  diagnostic.schema.json  env.schema.json  index.schema.json
crates/evidence-core/src/: boundary_check.rs  bundle.rs  cargo_metadata.rs  compliance.rs  coverage.rs  diagnostic.rs  env.rs  floors.rs  git.rs  hash.rs  lib.rs  policy.rs  rules 2.rs  rules.rs  schema.rs  schema_versions.rs  trace.rs  traits.rs  verify.rs
crates/evidence-core/src/boundary_check/: metadata.rs  tests.rs
crates/evidence-core/src/bundle/: builder.rs  builder_coverage.rs  capture.rs  command_failure.rs  error.rs  index.rs  outcome_record.rs  run_capture.rs  signing.rs  test_summary.rs
crates/evidence-core/src/cargo_metadata/: tests.rs
crates/evidence-core/src/compliance/: applicability.rs  coverage_verdict.rs  generator.rs  report.rs  status.rs
crates/evidence-core/src/coverage/: llvm_cov_json.rs  report.rs  thresholds.rs
crates/evidence-core/src/env/: capture.rs  fingerprint.rs  host.rs  manifest.rs
crates/evidence-core/src/floors/: tests.rs
crates/evidence-core/src/policy/: boundary.rs  dal.rs  evidence.rs  profile.rs
crates/evidence-core/src/rules/: domain_map.rs  hand_emitted.rs  tests.rs
crates/evidence-core/src/trace/: discovery.rs  entries.rs  read.rs  requirement_report.rs  selector_check.rs  surfaces.rs  test_backlinks.rs  uuid.rs  validation.rs
crates/evidence-core/src/verify/: bundle.rs  completeness.rs  cross_file.rs  engine_source.rs  errors.rs  errors_display.rs  llr_selectors.rs  runtime_error.rs
crates/evidence-core/tests/: bundle_content.rs  bundle_lifecycle.rs  check_source_tree.rs  ci_self_check.rs  compliance_coverage_upgrade.rs  compliance_fixture.rs  compliance_trace_honesty.rs  cross_platform_determinism.rs  diagnostic_codes_locked.rs  editor_duplicates_locked.rs  file_size_limit.rs  floors_trace_discovery.rs  git_and_hashes.rs  helpers.rs  library_no_tracing_error_locked.rs  libtest_parse.rs  local_ci_mirrors_workflow.rs  msrv_pinned.rs  rot_prone_markers_locked.rs  schema_versions_locked.rs  trace_decomposition.rs  trace_id_refs_locked.rs  trace_matrix.rs  trace_sys_layer.rs  verify_consistency.rs  verify_format.rs  verify_prerelease.rs  walker_helpers.rs  walker_usage_locked.rs  workflow_action_versions_locked.rs
crates/evidence-core/tests/diagnostic_codes_locked/: walker.rs
crates/evidence-core/tests/fixtures/: libtest_output_sample.txt
crates/evidence-core/tests/trace_id_refs_locked/: walker.rs
crates/evidence-mcp/: Cargo.toml  README.md
crates/evidence-mcp/src/: lib.rs  main.rs  schema.rs  server.rs  subprocess.rs  version_probe.rs  workspace.rs
crates/evidence-mcp/src/server/: responses.rs
crates/evidence-mcp/tests/: mcp_codes_audit.rs  mcp_diff_surface.rs  mcp_failure_surface.rs  mcp_floors_surface.rs  mcp_ping_surface.rs  mcp_surface.rs
crates/evidence-mcp/tests/mcp_surface/: helpers.rs
crates/evidence/schemas/: index.schema.json
crates/evidence/src/: boundary_check.rs  bundle.rs  compliance.rs  coverage.rs  diagnostic.rs  env.rs  floors.rs  git.rs  hash.rs  lib.rs  policy.rs  rules.rs  schema.rs  schema_versions.rs  trace.rs  traits.rs  util.rs  verify.rs
crates/evidence/src/bundle/: builder.rs  command.rs  error.rs  index.rs  signing.rs  test_summary.rs  time.rs
crates/evidence/src/compliance/: generator.rs  objective.rs  objectives_table.rs  report.rs  status.rs
crates/evidence/src/env/: capture.rs  fingerprint.rs  manifest.rs
crates/evidence/src/floors/: tests.rs  walker.rs
crates/evidence/src/policy/: boundary.rs  dal.rs  evidence.rs  profile.rs
crates/evidence/src/rules/: tests.rs
crates/evidence/src/trace/: entries.rs  matrix.rs  read.rs  requirement_report.rs  selector_check.rs  surfaces.rs  uuid.rs  validation.rs
crates/evidence/src/verify/: bundle.rs  consistency.rs  cross_file.rs  engine_source.rs  errors.rs  paths.rs
crates/evidence/tests/: bundle_content.rs  bundle_lifecycle.rs  check_source_tree.rs  ci_self_check.rs  compliance_fixture.rs  cross_platform_determinism.rs  diagnostic_codes_locked.rs  file_size_limit.rs  git_and_hashes.rs  helpers.rs  integration.rs  libtest_parse.rs  local_ci_mirrors_workflow.rs  msrv_pinned.rs  rot_prone_markers_locked.rs  schema_versions_locked.rs  trace_decomposition.rs  trace_id_refs_locked.rs  trace_matrix.rs  trace_sys_layer.rs  verify_consistency.rs  verify_format.rs  walker_usage_locked.rs
crates/evidence/tests/diagnostic_codes_locked/: walker.rs
crates/evidence/tests/fixtures/: libtest_output_sample.txt
crates/evidence/tests/trace_id_refs_locked/: walker.rs
(+65 files in other folders)
