[workspace]
resolver = "2"
members = ["crates/*"]

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
license = "MIT OR Apache-2.0"
repository = "https://github.com/user/evidence"
homepage = "https://github.com/user/evidence"
authors = []
keywords = ["certification", "evidence", "traceability", "reproducibility", "safety-critical"]
categories = ["development-tools", "command-line-utilities"]

[workspace.dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
hmac = "0.12"
hex = "0.4"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json"] }
toml = "0.8"
walkdir = "2"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }

# Internal crates
evidence = { version = "0.1.0", path = "crates/evidence" }

[workspace.lints.rust]
unsafe_code = "forbid"

# These are set to `deny` (not `forbid`) because the `clap` derive macros
# emit blanket `#[allow(clippy::restriction)]` in their expansion, which
# `forbid` at workspace level would reject with E0453. `deny` + CI's
# `-D warnings` still fails builds on any violation, and leaves room for
# test modules to opt into targeted `#[allow(...)]` where a `Result`-
# returning pattern isn't ergonomic.
[workspace.lints.clippy]
unwrap_used = "deny"
expect_used = "deny"
panic = "deny"
todo = "deny"
dbg_macro = "deny"
