[workspace]
resolver = "2"
members = ["crates/*"]

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.95"
license = "MIT OR Apache-2.0"
repository = "https://github.com/luofang34/Evidence"
homepage = "https://github.com/luofang34/Evidence"
authors = ["luofang <luofang@luofang.org>"]
keywords = ["certification", "evidence", "traceability", "reproducibility", "safety-critical"]
categories = ["development-tools", "command-line-utilities"]

[workspace.dependencies]
anyhow = "1"
thiserror = "2"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
hmac = "0.12"
hex = "0.4"
jsonschema = { version = "0.35", default-features = false }
tracing = "0.1"
tracing-subscriber = { version = "0.3", default-features = false, features = ["fmt", "env-filter"] }
toml = "0.8"
walkdir = "2"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }

# Internal crates
evidence-core = { version = "0.1.0", path = "crates/evidence-core" }

[workspace.lints.rust]
unsafe_code = "forbid"

# Every public item in a library crate must carry a doc comment. CI's
# doc gate (`ci.yml: cargo doc`) runs with `-D warnings`, so a missing
# doc on a public API fails the build, not just a lint nag.
#
# `warn` at lint level so local `cargo build` stays friendly; CI
# elevates via `-D warnings`. The CLI binary (`cargo-evidence`) has
# a crate-root `#![allow(missing_docs)]` because its internal `cli::*`
# modules are implementation detail, not public API.
missing_docs = "warn"

[workspace.lints.rustdoc]
# Broken intra-doc links (e.g. `[`NonexistentType`]`) are silent by
# default — rustdoc renders them as plain text and the reader never
# notices. Warn so `-D warnings` in the doc gate catches dead refs.
broken_intra_doc_links = "warn"

# These are set to `deny` (not `forbid`) because the `clap` derive macros
# emit blanket `#[allow(clippy::restriction)]` in their expansion, which
# `forbid` at workspace level would reject with E0453. `deny` + CI's
# `-D warnings` still fails builds on any violation, and leaves room for
# test modules to opt into targeted `#[allow(...)]` where a `Result`-
# returning pattern isn't ergonomic.
[workspace.lints.clippy]
unwrap_used = "deny"
expect_used = "deny"
panic = "deny"
todo = "deny"
dbg_macro = "deny"

# `let _ = <Result>` silently swallows errors; the two let_underscore
# lints promote the pattern to a compile-time deny. When a discard is
# intentional use `.ok()` so the intent is legible at the call site.
# Matches the project CLAUDE.md "Error Handling" rule.
let_underscore_must_use = "deny"
let_underscore_future = "deny"

# Holding a synchronous lock across `.await` is a recipe for
# deadlocks the moment someone else touches the same lock from an
# async context. The workspace is sync today but the deny is a
# forward-looking guardrail — cheaper to keep green now than to
# debug after the first async task sneaks in.
await_holding_lock = "deny"

# `collapsible_if` / `collapsible_match` are style lints promoted to
# warn-by-default in recent clippy versions. We routinely keep nested
# `if let … { if … { … } }` blocks when the outer binding and inner
# condition are semantically distinct; collapsing them produces
# harder-to-read combined conditions. Allow both at workspace level.
collapsible_if = "allow"
collapsible_match = "allow"
