[package]
name = "cargo-evidence"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Cargo subcommand for certification evidence generation, verification, and traceability"
repository.workspace = true
homepage.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true
readme = "../../README.md"

[[bin]]
name = "cargo-evidence"
path = "src/main.rs"

[dependencies]
evidence-core.workspace = true
anyhow.workspace = true
clap.workspace = true
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
walkdir.workspace = true

[dev-dependencies]
assert_cmd = "2.1.2"
predicates = "3.1.3"
tempfile = "3.24.0"
walkdir.workspace = true

[lints]
workspace = true
