[package]
name = "evidence"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Build evidence and reproducibility verification library"
repository.workspace = true
authors.workspace = true

[dependencies]
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
hex.workspace = true
toml.workspace = true
walkdir.workspace = true
chrono.workspace = true
